--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,14 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "db:install": "createdb goodDeeds && psql goodDeeds < install.sql",
+    "db:seed": "psql goodDeeds < seed.sql",
+    "db:reset": "dropdb goodDeeds && npm run db:install",
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "pg": "^8.3.3",
+    "postgresql": "0.0.1",
     "socket.io": "^2.3.0"
   }
 }
