--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.2",
     "install": "^0.13.0",
+    "moment": "^2.28.0",
+    "moment-timezone": "^0.5.31",
     "node-sass": "^4.14.1",
     "npm": "^6.14.8",
     "query-string": "^6.13.1",
@@ -17,6 +19,7 @@
     "react-bulma-components": "^3.4.0",
     "react-dom": "^16.13.1",
     "react-emoji": "^0.5.0",
+    "react-moment": "^0.9.7",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
